--- a/document-types/answer.html
+++ b/document-types/answer.html
@@ -361,7 +361,7 @@
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.uk/get-coronavirus-test">Get a free PCR test to check if you have coronavirus</a></li>
+<li><a href="https://www.gov.uk/get-coronavirus-test">Get a free PCR test to check if you have coronavirus (COVID-19)</a></li>
 <li><a href="https://www.gov.uk/log-in-file-self-assessment-tax-return">File your Self Assessment tax return online</a></li>
 <li><a href="https://www.gov.uk/national-minimum-wage-rates">National Minimum Wage and National Living Wage rates</a></li>
 <li><a href="https://www.gov.uk/contact-hmrc">Contact HMRC</a></li>
