Hourly scheduled redeploy b29e5880282bfba2484db4b22cc767d644b5c790

--- a/manual/on-call.html
+++ b/manual/on-call.html
@@ -175,7 +175,7 @@
             
   <p><a href='/manual.html#2nd-line'>2nd line</a></p>   <div class="govuk-!-font-size-16 govuk-!-margin-top-6">
 
-  Last updated: <a href="https://github.com/alphagov/govuk-developer-docs/commit/9ba52660950982bbc0e38ae16ee524710e942a47">19 Apr 2021</a>
+  Last updated: <a href="https://github.com/alphagov/govuk-developer-docs/commit/b29e5880282bfba2484db4b22cc767d644b5c790">21 Apr 2021</a>
 </div>
 
  <h1 id='header'>Out of hours support (on-call)</h1> <blockquote>
@@ -189,6 +189,7 @@ to keep GOV.UK running at night, on the weekends and on public holidays.</p>
 <ol>
 <li>Have the numbers of other people on your shift saved in your phone. This
 includes whoever is on Escalations. Get these numbers from PagerDuty.</li>
+<li>Make sure you know <a href="https://docs.google.com/spreadsheets/d/1a02TOV0Uee6lSCuUIh3G_J1ZPx6bXI2yz56afHOsQZI/edit#gid=823200360">how to contact the rest of SMT</a>, if the on-call SMT is unavailable.</li>
 <li>Ensure you have an up to date local copy of the <a href="https://github.com/alphagov/govuk-developer-docs/">Developer Docs</a> repository
 and that you can build it.</li>
 <li>Make sure your <a href="https://github.com/alphagov/fabric-scripts/"><code>fabric-scripts</code></a> are up to date.</li>
