--- a/apps/search-admin.html
+++ b/apps/search-admin.html
@@ -406,16 +406,16 @@
     <div class="gem-c-summary__block"></div>
 </div>
 <h2 id='imported-documents'>Imported documents</h2><h2 id='example-pages-published-by-search-admin'>Example pages published by search-admin</h2><p><ul class="gem-c-list govuk-list">
-      <li><a href="http://www.charnwood.gov.uk" class="govuk-link">Charnwood Borough Council</a></li>
-      <li><a href="http://www.dundeecity.gov.uk" class="govuk-link">Dundee City Council</a></li>
       <li><a href="https://www.ncsc.gov.uk" class="govuk-link">National Cyber Security Centre</a></li>
-      <li><a href="http://www.nottinghamshire.gov.uk" class="govuk-link">Nottinghamshire County Council</a></li>
-      <li><a href="http://www.cheltenham.gov.uk" class="govuk-link">Cheltenham Borough Council</a></li>
-      <li><a href="http://www.telford.gov.uk" class="govuk-link">Telford &amp; Wrekin Council</a></li>
-      <li><a href="http://www.arun.gov.uk/" class="govuk-link">Arun District Council</a></li>
-      <li><a href="http://www.lambeth.gov.uk" class="govuk-link">London Borough of Lambeth Council</a></li>
+      <li><a href="http://www.redbridge.gov.uk/" class="govuk-link">London Borough of Redbridge Council</a></li>
       <li><a href="http://www.northumberland.gov.uk" class="govuk-link">Northumberland County Council</a></li>
-      <li><a href="http://www.banbridge.com/" class="govuk-link">Banbridge District Council</a></li>
+      <li><a href="http://www.broadland.gov.uk" class="govuk-link">Broadland District Council</a></li>
+      <li><a href="http://www.southhams.gov.uk" class="govuk-link">South Hams District Council</a></li>
+      <li><a href="http://www.havant.gov.uk" class="govuk-link">Havant Borough Council</a></li>
+      <li><a href="http://www.crawley.gov.uk" class="govuk-link">Crawley Borough Council</a></li>
+      <li><a href="https://www.nhs.uk/active10" class="govuk-link">Active 10</a></li>
+      <li><a href="https://census.gov.uk/" class="govuk-link">Census 2021</a></li>
+      <li><a href="http://www.carrickfergus.org" class="govuk-link">Carrickfergus Borough Council</a></li>
 </ul></p>
 <h2 id='readme'>README</h2><p><div class="embedded-readme"></p>
 
