--- a/document-types/news_article.html
+++ b/document-types/news_article.html
@@ -361,16 +361,16 @@
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.uk/government/world-location-news/new-honorary-consul-appointed-in-the-bahamas">New honorary consul appointed in the Bahamas</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/262678.pt">Equipes britânicas de remo estão no Rio de Janeiro</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/reduced-consular-services-at-british-embassy-ljubljana--2">Reduced consular services at British Embassy Ljubljana</a></li>
 <li><a href="https://www.gov.uk/government/world-location-news/252606.zh-tw">Chevening 英國政府獎學金開放申請</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/171845.es-419">G8: Oportunidades para todos, incluyendo Guatemala</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/closure-of-the-british-embassy-phnom-penh--2">Closure of the British Embassy Phnom Penh</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/uk-uae-commit-to-a-closer-relationship-on-transport-cooperation--2">UK &amp; UAE commit to a closer relationship on transport cooperation</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/235531.pt">Estado de SP e Reino Unido anunciam parceria</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/uk-delegation-announces-its-2013-industry-day-the-future-of-nato-business--2">UK Delegation announces its 2013 Industry Day: The Future of NATO Business</a></li>
 <li><a href="https://www.gov.uk/government/world-location-news/263029.pt">Banco Central e Reino Unido assinam acordo de cooperação</a></li>
 <li><a href="https://www.gov.uk/government/world-location-news/238913.pt">Conferência sobre Eficiência Energética em Manaus</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/290702.ja">英国による健康保険付加料の導入</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/246679.es-419">Aviation security update</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/closure-of-the-british-embassy-phnom-penh--2">Closure of the British Embassy Phnom Penh</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/advice-for-british-nationals-in-chennai--8">Advice for British nationals in Chennai</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/reduced-consular-services-at-british-embassy-ljubljana--2">Reduced consular services at British Embassy Ljubljana</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/locate-switch-off">LOCATE switch-off</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=news_article&amp;count=10">Source query from Search API</a></p>
 
