--- a/manual/alerts/content-publisher-government-data-check-not-ok.html
+++ b/manual/alerts/content-publisher-government-data-check-not-ok.html
@@ -10,23 +10,23 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
 
-    <title>content-publisher app healthcheck not ok - GOV.UK Developer Documentation</title>
+    <title>content-publisher government-data check not ok - GOV.UK Developer Documentation</title>
 
     <link href="/stylesheets/manifest.css" rel="stylesheet" />
 
-    <link rel="canonical" href="https://docs.publishing.service.gov.uk/manual/alerts/content-publisher-app-healthcheck-not-ok.html">
+    <link rel="canonical" href="https://docs.publishing.service.gov.uk/manual/alerts/content-publisher-government-data-check-not-ok.html">
 
       <meta name="twitter:card" content="summary" />
       <meta name="twitter:domain" content="docs.publishing.service.gov.uk" />
       <meta name="twitter:image" content="https://docs.publishing.service.gov.uk/images/govuk-large.png" />
-      <meta name="twitter:title" content="content-publisher app healthcheck not ok - GOV.UK Developer Documentation" />
-      <meta name="twitter:url" content="https://docs.publishing.service.gov.uk/manual/alerts/content-publisher-app-healthcheck-not-ok.html" />
+      <meta name="twitter:title" content="content-publisher government-data check not ok - GOV.UK Developer Documentation" />
+      <meta name="twitter:url" content="https://docs.publishing.service.gov.uk/manual/alerts/content-publisher-government-data-check-not-ok.html" />
 
       <meta property="og:image" content="https://docs.publishing.service.gov.uk/images/govuk-large.png" />
       <meta property="og:site_name" content="GOV.UK Developer Documentation" />
-      <meta property="og:title" content="content-publisher app healthcheck not ok" />
+      <meta property="og:title" content="content-publisher government-data check not ok" />
       <meta property="og:type" content="object" />
-      <meta property="og:url" content="https://docs.publishing.service.gov.uk/manual/alerts/content-publisher-app-healthcheck-not-ok.html" />
+      <meta property="og:url" content="https://docs.publishing.service.gov.uk/manual/alerts/content-publisher-government-data-check-not-ok.html" />
 
     
   </head>
@@ -131,12 +131,7 @@
                   <a href='/manual.html' class="toc__back-link govuk-link">&lsaquo; Manual</a>
   <ul>
   <li>
-    <a href="#header"><span>content-publisher app healthcheck not ok</span></a>
-    <ul>
-      <li>
-        <a href="#government-data-check"><span>Government Data Check</span></a>
-      </li>
-    </ul>
+    <a href="#header"><span>content-publisher government-data check not ok</span></a>
   </li>
 </ul>
 
@@ -151,26 +146,17 @@
       This page describes what to do in case of an
       <a href='https://docs.publishing.service.gov.uk/manual/tools.html#icinga'>Icinga alert</a>.
       For more information you could
-      <a href='https://github.com/alphagov/govuk-puppet/search?utf8=%E2%9C%93&q=content-publisher-app-healthcheck-not-ok'>
+      <a href='https://github.com/alphagov/govuk-puppet/search?utf8=%E2%9C%93&q=content-publisher-government-data-check-not-ok'>
         search the govuk-puppet repo for the source of the alert
       </a>
     </div>
 
      <div class="govuk-!-font-size-16 govuk-!-margin-top-6">
-    <div class="govuk-warning-text">
-      <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
-      <strong class="govuk-warning-text__text">
-        <span class="govuk-warning-text__assistive">Warning</span>
-        This document has not been updated for a while now. It may be out of date.
-      </strong>
-    </div>
 
-  Last updated: <a href="https://github.com/alphagov/govuk-developer-docs/commit/95838e96b9f9cdf15b4fd27a7b1bf5e8a07cfbab">15 Sep 2020</a>
+  Last updated: <a href="https://github.com/alphagov/govuk-developer-docs/commit/411d0d8256357861223d1858d594bb0dfdccaede">21 Apr 2021</a>
 </div>
 
- <h1 id='header'>content-publisher app healthcheck not ok</h1> <p>See also: <a href="/manual/alerts/app-healthcheck-not-ok.html">how healthcheck alerts work on GOV.UK</a></p>
-<p>There are a few things that this alert can be, you&rsquo;ll need to click on the alert to find out more details on what&rsquo;s gone wrong. There are more details and common fixes listed below.</p>
-<h2 id='government-data-check'>Government Data Check</h2><p>This means that Content Publisher is having trouble updating the data it holds on current and previous governments. Ordinarily it reloads this data from the Publishing API every fifteen minutes and seeing this error means it hasn&rsquo;t happened in at least 6 hours. After 24 hours the cache of government data will clear and the app will stop working as expected. The following suggestions should help to isolate the problem.</p>
+ <h1 id='header'>content-publisher government-data check not ok</h1> <p>This means that Content Publisher is having trouble updating the data it holds on current and previous governments. Ordinarily it reloads this data from the Publishing API every fifteen minutes and seeing this error means it hasn&rsquo;t happened in at least 6 hours. After 24 hours the cache of government data will clear and the app will stop working as expected. The following suggestions should help to isolate the problem.</p>
 
 <ul>
 <li>Check <a href="[https://sentry.io/organizations/govuk/issues/?project=1242052]">Sentry</a> for any recent errors that indicate reasons the job is failing</li>
@@ -189,8 +175,8 @@
 
           <aside>
               <ul class="contribution-banner">
-                <li><a href="https://github.com/alphagov/govuk-developer-docs/blob/master/source/manual/alerts/content-publisher-app-healthcheck-not-ok.html.md">View source</a></li>
-                <li><a href="https://github.com/alphagov/govuk-developer-docs/issues/new?labels=bug&amp;title=Re:%20'content-publisher%20app%20healthcheck%20not%20ok'&amp;body=Problem%20with%20'content-publisher%20app%20healthcheck%20not%20ok'%20(https://docs.publishing.service.gov.uk/manual/alerts/content-publisher-app-healthcheck-not-ok.html)">Report problem</a></li>
+                <li><a href="https://github.com/alphagov/govuk-developer-docs/blob/master/source/manual/alerts/content-publisher-government-data-check-not-ok.html.md">View source</a></li>
+                <li><a href="https://github.com/alphagov/govuk-developer-docs/issues/new?labels=bug&amp;title=Re:%20'content-publisher%20government-data%20check%20not%20ok'&amp;body=Problem%20with%20'content-publisher%20government-data%20check%20not%20ok'%20(https://docs.publishing.service.gov.uk/manual/alerts/content-publisher-government-data-check-not-ok.html)">Report problem</a></li>
                 <li><a href="https://github.com/alphagov/govuk-developer-docs">GitHub Repo</a></li>
               </ul>
           </aside>
