--- a/document-types/external_content.html
+++ b/document-types/external_content.html
@@ -359,16 +359,16 @@ actually any pages with this document type.</p>
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
+<li><a href="https://www.gov.ukhttp//www.nottinghamshire.gov.uk">Nottinghamshire County Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.dundeecity.gov.uk">Dundee City Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.charnwood.gov.uk">Charnwood Borough Council</a></li>
+<li><a href="https://www.gov.ukhttps//www.moneyadviceservice.org.uk/en/categories/managing-debt">Debt management - Money Advice Service</a></li>
+<li><a href="https://www.gov.ukhttp//www.basingstoke.gov.uk">Basingstoke and Deane Borough Council</a></li>
 <li><a href="https://www.gov.ukhttps//www.ncsc.gov.uk">National Cyber Security Centre</a></li>
 <li><a href="https://www.gov.ukhttp//www.redbridge.gov.uk/">London Borough of Redbridge Council</a></li>
 <li><a href="https://www.gov.ukhttp//www.northumberland.gov.uk">Northumberland County Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.broadland.gov.uk">Broadland District Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.southhams.gov.uk">South Hams District Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.havant.gov.uk">Havant Borough Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.crawley.gov.uk">Crawley Borough Council</a></li>
-<li><a href="https://www.gov.ukhttps//www.nhs.uk/active10">Active 10</a></li>
-<li><a href="https://www.gov.ukhttps//census.gov.uk/">Census 2021</a></li>
-<li><a href="https://www.gov.ukhttp//www.carrickfergus.org">Carrickfergus Borough Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.arun.gov.uk/">Arun District Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.telford.gov.uk">Telford &amp; Wrekin Council</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=external_content&amp;count=10">Source query from Search API</a></p>
 
