Hourly scheduled redeploy 064245f59cd2a0bdaab5fe22ffc0d12b61c58b0d

--- a/document-types/independent_report.html
+++ b/document-types/independent_report.html
@@ -369,8 +369,8 @@
 <li><a href="https://www.gov.uk/government/publications/final-report-the-economics-of-biodiversity-the-dasgupta-review">Final Report - The Economics of Biodiversity: The Dasgupta Review</a></li>
 <li><a href="https://www.gov.uk/government/publications/air-accident-monthly-bulletin-april-2021">Air accident monthly bulletin April 2021</a></li>
 <li><a href="https://www.gov.uk/government/publications/report-of-the-mid-staffordshire-nhs-foundation-trust-public-inquiry">Report of the Mid Staffordshire NHS Foundation Trust Public Inquiry</a></li>
+<li><a href="https://www.gov.uk/government/publications/the-victoria-climbie-inquiry-report-of-an-inquiry-by-lord-laming">The Victoria Climbie Inquiry: report of an inquiry by Lord Laming</a></li>
 <li><a href="https://www.gov.uk/government/publications/liverpool-city-council-best-value-inspection-report">Liverpool City Council: Best Value inspection report</a></li>
-<li><a href="https://www.gov.uk/government/publications/modernising-the-mental-health-act-final-report-from-the-independent-review">Modernising the Mental Health Act – final report from the independent review</a></li>
 <li><a href="https://www.gov.uk/government/publications/armed-forces-pay-review-body-forty-ninth-report-2020">Armed Forces’ Pay Review Body: Forty-Ninth Report 2020</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=independent_report&amp;count=10">Source query from Search API</a></p>
