--- a/document-types/residential_property_tribunal_decision.html
+++ b/document-types/residential_property_tribunal_decision.html
@@ -370,7 +370,7 @@
 <li><a href="https://www.gov.uk/residential-property-tribunal-decisions/19-lansdowne-road-bournemouth-dorset-bh1-1rz-chi-slash-00hn-slash-ldc-slash-2020-slash-0086">19 Lansdowne Road, Bournemouth, Dorset, BH1 1RZ : CHI/00HN/LDC/2020/0086</a></li>
 <li><a href="https://www.gov.uk/residential-property-tribunal-decisions/68-nobel-house-4-queensway-redhill-surrey-rh1-1ty-chi-43uf-lac-2019-0025">68 Nobel House, 4 Queensway, Redhill, Surrey RH1 1TY - CHI/43UF/LAC/2019/0025</a></li>
 <li><a href="https://www.gov.uk/residential-property-tribunal-decisions/1-elizabeth-court-winston-churchill-drive-kings-lynn-norfolk-pe30-4ur-cam-slash-33ue-slash-lis-slash-2020-slash-0025">1 Elizabeth Court, Winston Churchill Drive, Kings Lynn Norfolk PE30 4UR: CAM/33UE/LIS/2020/0025</a></li>
-<li><a href="https://www.gov.uk/residential-property-tribunal-decisions/5-st-stephens-cottages-70-vincent-road-kingston-upon-thames-surrey-kt1-3hj-lon-slash-00ax-slash-lbc-slash-2020-slash-0034">5 St Stephens Cottages, 70 Vincent Road, Kingston Upon Thames, Surrey, KT1 3HJ : LON/00AX/LBC/2020/0034</a></li>
+<li><a href="https://www.gov.uk/residential-property-tribunal-decisions/2-bodesway-orton-malbourne-peterborough-cambridgeshire-pe2-5rt-cam-slash-00ja-slash-hna-slash-2020-slash-0030">2 Bodesway, Orton Malbourne, Peterborough Cambridgeshire PE2 5RT: CAM/00JA/HNA/2020/0030</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=residential_property_tribunal_decision&amp;count=10">Source query from Search API</a></p>
 
