--- a/document-types/aaib_report.html
+++ b/document-types/aaib_report.html
@@ -365,12 +365,12 @@
 <li><a href="https://www.gov.uk/aaib-reports/aaib-investigation-to-boeing-787-9-g-zbkf">AAIB investigation to Boeing 787-9, G-ZBKF    </a></li>
 <li><a href="https://www.gov.uk/aaib-reports/aaib-investigation-to-airbus-a319-111-g-ezdd">AAIB investigation to Airbus A319-111, G-EZDD   </a></li>
 <li><a href="https://www.gov.uk/aaib-reports/aaib-investigation-to-sb-5e-glider-g-dejh">AAIB investigation to SB-5E glider, G-DEJH    </a></li>
-<li><a href="https://www.gov.uk/aaib-reports/aaib-investigation-to-scheibe-super-falke-sf25e-g-kdey">AAIB investigation to Scheibe Super Falke SF25E, G-KDEY  </a></li>
 <li><a href="https://www.gov.uk/aaib-reports/aaib-investigation-to-bae-atp-se-mao">AAIB investigation to BAe ATP, SE-MAO  </a></li>
+<li><a href="https://www.gov.uk/aaib-reports/aaib-investigation-to-scheibe-super-falke-sf25e-g-kdey">AAIB investigation to Scheibe Super Falke SF25E, G-KDEY  </a></li>
+<li><a href="https://www.gov.uk/aaib-reports/aaib-investigation-to-bae-atp-se-mao-18-august-2020">AAIB investigation to BAe ATP, SE-MAO 18 August 2020</a></li>
 <li><a href="https://www.gov.uk/aaib-reports/aaib-investigation-to-europa-g-bxtd">AAIB investigation to Europa,  G-BXTD   </a></li>
 <li><a href="https://www.gov.uk/aaib-reports/aaib-investigation-to-rans-s6-116-coyote-ii-g-buwk">AAIB investigation to Rans S6-116 Coyote II, G-BUWK</a></li>
 <li><a href="https://www.gov.uk/aaib-reports/aaib-investigation-to-rockwell-commander-112-g-lite">AAIB investigation to Rockwell Commander 112,  G-LITE   </a></li>
-<li><a href="https://www.gov.uk/aaib-reports/aaib-investigation-to-piper-pa-28r-201t-turbo-cherokee-arrow-iii-g-dday">AAIB investigation to Piper PA-28R-201T Turbo Cherokee Arrow III, G-DDAY</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=aaib_report&amp;count=10">Source query from Search API</a></p>
 
