--- a/document-types/esi_fund.html
+++ b/document-types/esi_fund.html
@@ -330,7 +330,7 @@
           <main id="content" class="technical-documentation" data-module="anchored-headings">
               <h1 class="page-title">Document type: esi_fund</h1>
 
-  <p>There are <strong>1412</strong> pages with document type
+  <p>There are <strong>1413</strong> pages with document type
 &lsquo;esi_fund&rsquo; in the GOV.UK search index.</p>
 <h2 id='rendering-apps'>Rendering apps</h2><p>This document type is rendered by:</p>
 
@@ -362,14 +362,14 @@
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
 <li><a href="https://www.gov.uk/european-structural-investment-funds/london-esf-priority-1-call-2021-2023-oc23s21p1831">London ESF Priority 1 Call 2021-2023 (OC23S21P1831)                                                                                                                        </a></li>
-<li><a href="https://www.gov.uk/european-structural-investment-funds/london-esf-priority-2-call-2021-2023-oc23s21p1832">London ESF Priority 2 Call 2021-2023 (OC23S21P1832)</a></li>
 <li><a href="https://www.gov.uk/european-structural-investment-funds/covid-19-response-neets-engagement-in-new-anglia-oc24s21p1840">COVID-19 Response NEETs Engagement in New Anglia – OC24S21P1840</a></li>
-<li><a href="https://www.gov.uk/european-structural-investment-funds/young-peoples-mental-health-and-employability-support-programme-sheffield-city-region-oc28s21p1837">Young People’s Mental Health and Employability Support Programme - Sheffield City Region (OC28S21P1837)   </a></li>
+<li><a href="https://www.gov.uk/european-structural-investment-funds/london-esf-priority-2-call-2021-2023-oc23s21p1832">London ESF Priority 2 Call 2021-2023 (OC23S21P1832)</a></li>
 <li><a href="https://www.gov.uk/european-structural-investment-funds/enterprise-m3-community-grants-programme-oc10s21p1835">Enterprise M3 Community Grants Programme – OC10S21P1835   </a></li>
+<li><a href="https://www.gov.uk/european-structural-investment-funds/young-peoples-mental-health-and-employability-support-programme-sheffield-city-region-oc28s21p1837">Young People’s Mental Health and Employability Support Programme - Sheffield City Region (OC28S21P1837)   </a></li>
 <li><a href="https://www.gov.uk/european-structural-investment-funds/pathways-to-opportunity-for-young-people-oc30s21p1822">Pathways to opportunity for young people – OC30S21P1822</a></li>
 <li><a href="https://www.gov.uk/european-structural-investment-funds/skills-for-the-mature-workforce-project-call-in-worcester-lep-oc38s21p1825">Skills for the Mature Workforce project call in Worcester LEP (OC38S21P1825)</a></li>
 <li><a href="https://www.gov.uk/european-structural-investment-funds/active-inclusion-supporting-those-with-barriers-to-entering-the-labour-market-and-most-effected-by-covid-19-oc19s21p1809">CLOSED: Active Inclusion, supporting those with barriers to entering the labour market and most effected by COVID-19 (OC19S21P1809)                                                                                                                                    </a></li>
-<li><a href="https://www.gov.uk/european-structural-investment-funds/humber-women-in-the-workforce-oc18s21p1799">CLOSED: Humber - Women in the Workforce  (OC18S21P1799)                                                                                                                                     </a></li>
+<li><a href="https://www.gov.uk/european-structural-investment-funds/the-covid-19-youth-employment-programme-in-d2n2-oc08s21p1818">The COVID-19 youth employment programme in D2N2  (OC08S21P1818)</a></li>
 <li><a href="https://www.gov.uk/european-structural-investment-funds/enhanced-local-flexibility-for-the-unemployed-phase-4-oc20s21p1811">CLOSED: Enhanced Local Flexibility for the Unemployed – Phase 4 – OC20S21P1811                                                                                                                                       </a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=esi_fund&amp;count=10">Source query from Search API</a></p>
