--- a/document-types/foi_release.html
+++ b/document-types/foi_release.html
@@ -370,7 +370,7 @@
 <li><a href="https://www.gov.uk/government/publications/foi-release-pay-scales">FOI release: Pay scales</a></li>
 <li><a href="https://www.gov.uk/government/publications/nominal-criminal-records-on-the-police-national-computer">Nominal Criminal records on the Police National Computer</a></li>
 <li><a href="https://www.gov.uk/government/publications/period-that-individuals-may-be-outside-the-uk-without-losing-their-indefinite-leave-to-remain">Period that individuals may be outside the UK without losing their Indefinite Leave to Remain</a></li>
-<li><a href="https://www.gov.uk/government/publications/a-list-of-all-companies-registered-with-companies-house-to-date">A list of all companies registered with Companies House to date</a></li>
+<li><a href="https://www.gov.uk/government/publications/disposal-of-dead-animals">Disposal of dead animals</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=foi_release&amp;count=10">Source query from Search API</a></p>
 
