--- a/document-types/map.html
+++ b/document-types/map.html
@@ -330,7 +330,7 @@
           <main id="content" class="technical-documentation" data-module="anchored-headings">
               <h1 class="page-title">Document type: map</h1>
 
-  <p>There are <strong>423</strong> pages with document type
+  <p>There are <strong>422</strong> pages with document type
 &lsquo;map&rsquo; in the GOV.UK search index.</p>
 <h2 id='rendering-apps'>Rendering apps</h2><p>This document type is rendered by:</p>
 
@@ -364,13 +364,13 @@
 <li><a href="https://www.gov.uk/government/publications/roads-managed-by-highways-england">Roads managed by Highways England</a></li>
 <li><a href="https://www.gov.uk/government/publications/flood-risk-maps-2019">Flood risk maps 2019</a></li>
 <li><a href="https://www.gov.uk/government/publications/hs2-plan-and-profile-maps-post-house-of-commons-select-committee-2016-country-south">HS2 Phase One: updated plan and profile maps for Country South 2016</a></li>
-<li><a href="https://www.gov.uk/government/publications/specialist-schemes-testing-station-map">Vehicle approval and specialist test locations</a></li>
 <li><a href="https://www.gov.uk/government/publications/plans-and-sections-for-hs2-phase-2a">Plans and sections for HS2 Phase 2a</a></li>
 <li><a href="https://www.gov.uk/government/publications/hs2-plan-and-profile-maps-london-to-the-west-midlands-index-and-key-plans">HS2 Phase One plan and profile maps: index and key plans</a></li>
-<li><a href="https://www.gov.uk/government/publications/hs2-plan-and-profile-maps-post-house-of-commons-select-committee-2016-west-midlands">HS2 Phase One: updated plan and profile maps for West Midlands 2016</a></li>
 <li><a href="https://www.gov.uk/government/publications/hs2-phase-2b-crewe-to-manchester-route-section-map">HS2 Phase 2b: Crewe to Manchester route section map</a></li>
-<li><a href="https://www.gov.uk/government/publications/hs2-phase-one-environmental-statement-volume-2-community-forum-area-reports-and-mapbooks">HS2 Phase One environmental statement volume 2: community forum area reports and mapbooks</a></li>
+<li><a href="https://www.gov.uk/government/publications/hs2-plan-and-profile-maps-post-house-of-commons-select-committee-2016-west-midlands">HS2 Phase One: updated plan and profile maps for West Midlands 2016</a></li>
 <li><a href="https://www.gov.uk/government/publications/environment-agency-area-and-region-operational-locations">Environment Agency area and region operational locations</a></li>
+<li><a href="https://www.gov.uk/government/publications/hs2-phase-one-environmental-statement-volume-2-community-forum-area-reports-and-mapbooks">HS2 Phase One environmental statement volume 2: community forum area reports and mapbooks</a></li>
+<li><a href="https://www.gov.uk/government/publications/property-scheme-maps-for-hs2-phase-2b">Property scheme maps for HS2 Phase 2b</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=map&amp;count=10">Source query from Search API</a></p>
 
