--- a/document-types/national_statistics.html
+++ b/document-types/national_statistics.html
@@ -368,9 +368,9 @@
 <li><a href="https://www.gov.uk/government/statistics/deaths-due-to-covid-19-compared-with-deaths-from-influenza-and-pneumonia">Deaths due to COVID-19 compared with deaths from influenza and pneumonia</a></li>
 <li><a href="https://www.gov.uk/government/statistics/special-educational-needs-in-england-january-2020">Special educational needs in England: January 2020</a></li>
 <li><a href="https://www.gov.uk/government/statistics/overseas-travel-and-tourism-september-2021-provisional-results">Overseas travel and tourism: September 2021 provisional results</a></li>
+<li><a href="https://www.gov.uk/government/statistics/monthly-property-transactions-completed-in-the-uk-with-value-40000-or-above">Monthly property transactions completed in the UK with value of £40,000 or above</a></li>
 <li><a href="https://www.gov.uk/government/statistics/uk-house-price-index-summary-january-2021">UK House Price Index summary: January 2021</a></li>
 <li><a href="https://www.gov.uk/government/statistics/energy-consumption-in-the-uk">Energy consumption in the UK</a></li>
-<li><a href="https://www.gov.uk/government/statistics/immigration-statistics-year-ending-december-2020">Immigration statistics, year ending December 2020</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=national_statistics&amp;count=10">Source query from Search API</a></p>
 
