--- a/document-types/news_story.html
+++ b/document-types/news_story.html
@@ -330,7 +330,7 @@
           <main id="content" class="technical-documentation" data-module="anchored-headings">
               <h1 class="page-title">Document type: news_story</h1>
 
-  <p>There are <strong>42098</strong> pages with document type
+  <p>There are <strong>42101</strong> pages with document type
 &lsquo;news_story&rsquo; in the GOV.UK search index.</p>
 <h2 id='rendering-apps'>Rendering apps</h2><p>This document type is rendered by:</p>
 
@@ -364,14 +364,14 @@
 <ul>
 <li><a href="https://www.gov.uk/government/news/global-travel-taskforce-sets-out-framework-to-safely-reopen-international-travel">Global Travel Taskforce sets out framework to safely reopen international travel</a></li>
 <li><a href="https://www.gov.uk/government/news/one-minute-national-silence-to-mark-the-death-of-hrh-the-duke-of-edinburgh">One minute national silence to mark the death of HRH The Duke of Edinburgh</a></li>
-<li><a href="https://www.gov.uk/government/news/people-urged-to-apply-now-for-british-passport">People urged to apply now for British passport</a></li>
-<li><a href="https://www.gov.uk/government/news/recovery-loan-scheme-launches-today">Recovery Loan Scheme launches today</a></li>
 <li><a href="https://www.gov.uk/government/news/increase-to-working-tax-credits-what-this-means">Increase to Working Tax Credits - what this means</a></li>
 <li><a href="https://www.gov.uk/government/news/flag-flying-to-mark-death-of-his-royal-highness-the-duke-of-edinburgh">Flag flying to mark the death of His Royal Highness The Duke of Edinburgh</a></li>
 <li><a href="https://www.gov.uk/government/news/magistrates-court-listings-now-published-online">Magistrates’ court listings now published online</a></li>
-<li><a href="https://www.gov.uk/government/news/countries-added-to-red-list-to-protect-uk-against-variants-of-concern">Countries added to red list to protect UK against variants of concern</a></li>
+<li><a href="https://www.gov.uk/government/news/recovery-loan-scheme-launches-today">Recovery Loan Scheme launches today</a></li>
+<li><a href="https://www.gov.uk/government/news/people-urged-to-apply-now-for-british-passport">People urged to apply now for British passport</a></li>
 <li><a href="https://www.gov.uk/government/news/proposed-new-timetable-for-state-pension-age-increases">Proposed new timetable for State Pension age increases</a></li>
-<li><a href="https://www.gov.uk/government/news/statement-on-astrazeneca-covid-19-vaccine-following-mhra-update">Statement on AstraZeneca COVID-19 vaccine following MHRA update</a></li>
+<li><a href="https://www.gov.uk/government/news/countries-added-to-red-list-to-protect-uk-against-variants-of-concern">Countries added to red list to protect UK against variants of concern</a></li>
+<li><a href="https://www.gov.uk/government/news/india-added-to-red-list-as-cases-of-new-variant-rise">India added to red list as cases of new variant rise</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=news_story&amp;count=10">Source query from Search API</a></p>
 
