--- a/document-types/research.html
+++ b/document-types/research.html
@@ -371,7 +371,7 @@
 <li><a href="https://www.gov.uk/government/publications/covid-19-variants-genomically-confirmed-case-numbers">COVID-19 variants: genomically confirmed case numbers</a></li>
 <li><a href="https://www.gov.uk/government/publications/report-of-the-commission-on-human-medicines-expert-working-group-on-covid-19-vaccine-safety-surveillance">Report of the Commission on Human Medicines Expert Working Group on COVID-19 vaccine safety surveillance</a></li>
 <li><a href="https://www.gov.uk/government/publications/ofsted-review-of-sexual-abuse">Ofsted review of sexual abuse</a></li>
-<li><a href="https://www.gov.uk/government/publications/imperial-college-london-evaluating-englands-roadmap-out-of-lockdown-30-march-2021">Imperial College London: Evaluating England’s Roadmap out of Lockdown, 30 March 2021</a></li>
+<li><a href="https://www.gov.uk/government/publications/notifiable-diseases-weekly-reports-for-2021">Notifiable diseases: weekly reports for 2021</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=research&amp;count=10">Source query from Search API</a></p>
 
