--- a/document-types/service_standard_report.html
+++ b/document-types/service_standard_report.html
@@ -370,7 +370,7 @@
 <li><a href="https://www.gov.uk/service-standard-reports/report-a-cyber-incident">Report A Cyber Incident</a></li>
 <li><a href="https://www.gov.uk/service-standard-reports/apply-for-a-large-countryside-productivity-grant-alpha-assessment">Apply for a large countryside productivity grant alpha assessment</a></li>
 <li><a href="https://www.gov.uk/service-standard-reports/nhs-jobs-get-a-job-with-the-nhs">NHS Jobs - Get a job with the NHS</a></li>
-<li><a href="https://www.gov.uk/service-standard-reports/pay-a-dvla-fine-live-assessment">Pay a DVLA fine - Live Assessment</a></li>
+<li><a href="https://www.gov.uk/service-standard-reports/find-an-energy-certificate-alpha-assessment-report">Find an Energy Certificate alpha assessment report</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=service_standard_report&amp;count=10">Source query from Search API</a></p>
 
