--- a/document-types/speech.html
+++ b/document-types/speech.html
@@ -330,7 +330,7 @@
           <main id="content" class="technical-documentation" data-module="anchored-headings">
               <h1 class="page-title">Document type: speech</h1>
 
-  <p>There are <strong>8623</strong> pages with document type
+  <p>There are <strong>8624</strong> pages with document type
 &lsquo;speech&rsquo; in the GOV.UK search index.</p>
 <h2 id='rendering-apps'>Rendering apps</h2><p>This document type is rendered by:</p>
 
@@ -368,10 +368,10 @@
 <li><a href="https://www.gov.uk/government/speeches/prime-ministers-statement-on-coronavirus-covid-19-19-december-2020">Prime Minister&rsquo;s statement on coronavirus (COVID-19): 19 December 2020</a></li>
 <li><a href="https://www.gov.uk/government/speeches/pm-address-to-the-nation-on-coronavirus-23-march-2020">Prime Minister&rsquo;s statement on coronavirus (COVID-19): 23 March 2020</a></li>
 <li><a href="https://www.gov.uk/government/speeches/prime-ministers-address-to-the-nation-4-january-2021">Prime Minister&rsquo;s address to the nation: 4 January 2021</a></li>
-<li><a href="https://www.gov.uk/government/speeches/the-purpose-of-education">The purpose of education</a></li>
-<li><a href="https://www.gov.uk/government/speeches/pms-skills-speech-29-september-2020">PM&rsquo;s skills speech: 29 September 2020</a></li>
-<li><a href="https://www.gov.uk/government/speeches/the-4th-industrial-revolution">The Fourth Industrial Revolution</a></li>
 <li><a href="https://www.gov.uk/government/speeches/minister-for-equalities-speech-on-the-commission-on-race-and-ethnic-disparities-report">Minister for Equalities&rsquo; speech on the Commission on Race and Ethnic Disparities&rsquo; report</a></li>
+<li><a href="https://www.gov.uk/government/speeches/the-purpose-of-education">The purpose of education</a></li>
+<li><a href="https://www.gov.uk/government/speeches/preparing-for-future-pandemics">Preparing for future pandemics</a></li>
+<li><a href="https://www.gov.uk/government/speeches/pms-skills-speech-29-september-2020">PM&rsquo;s skills speech: 29 September 2020</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=speech&amp;count=10">Source query from Search API</a></p>
 
