--- a/document-types/world_news_story.html
+++ b/document-types/world_news_story.html
@@ -367,10 +367,10 @@
 <li><a href="https://www.gov.uk/government/news/want-to-contact-uk-visas-and-immigration">Want to contact UK Visas and Immigration?</a></li>
 <li><a href="https://www.gov.uk/government/news/attestation-forms-for-travel-to-and-within-france">Attestation forms for travel to and within France</a></li>
 <li><a href="https://www.gov.uk/government/news/call-for-bids-supporting-women-peace-and-security-in-iraq">Call for bids: supporting Women, Peace and Security in Iraq</a></li>
-<li><a href="https://www.gov.uk/government/news/rear-admiral-simon-ancona-uk-acdsde-visit-to-thailand-13-14-october">Rear Admiral Simon Ancona, UK ACDS(DE), visit to Thailand 13-14 October</a></li>
 <li><a href="https://www.gov.uk/government/news/tier-4-student-visa-checklist">Tier 4 student visa checklist</a></li>
+<li><a href="https://www.gov.uk/government/news/uk-shares-experiences-to-increase-confidence-in-vaccines">UK shares experiences to increase confidence in vaccines</a></li>
 <li><a href="https://www.gov.uk/government/news/changes-to-british-passport-services-in-australia">Changes to British Passport Services in Australia</a></li>
-<li><a href="https://www.gov.uk/government/news/be-travel-aware">Be Travel Aware: Check your passport&rsquo;s validity</a></li>
+<li><a href="https://www.gov.uk/government/news/information-and-events-for-british-citizens-in-france">Information and events for British citizens in France</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=world_news_story&amp;count=10">Source query from Search API</a></p>
 
