Hourly scheduled redeploy 064245f59cd2a0bdaab5fe22ffc0d12b61c58b0d

--- a/apps/whitehall.html
+++ b/apps/whitehall.html
@@ -425,7 +425,6 @@
       <li><a href="/apps/whitehall/timestamps.html" class="govuk-link">Timestamps</a></li>
 </ul></p>
 <h2 id='example-pages-published-by-whitehall'>Example pages published by whitehall</h2><p><ul class="gem-c-list govuk-list">
-      <li><a href="https://www.gov.uk/government/organisations" class="govuk-link">Departments, agencies and public bodies</a></li>
       <li><a href="https://www.gov.uk/government/ministers" class="govuk-link">Ministers</a></li>
       <li><a href="https://www.gov.uk/world/embassies" class="govuk-link">Find a British embassy, high commission or consulate</a></li>
       <li><a href="https://www.gov.uk/government/people/bill-crothers" class="govuk-link">Bill Crothers</a></li>
@@ -435,6 +434,7 @@
       <li><a href="https://www.gov.uk/government/ministers/prime-minister" class="govuk-link">Prime Minister</a></li>
       <li><a href="https://www.gov.uk/government/people/matthew-hancock" class="govuk-link">The Rt Hon Matt Hancock MP</a></li>
       <li><a href="https://www.gov.uk/government/people/christopher-whitty" class="govuk-link">Professor Chris Whitty</a></li>
+      <li><a href="https://www.gov.uk/government/people/mercy-muroki" class="govuk-link">Mercy Muroki</a></li>
 </ul></p>
 <h2 id='readme'>README</h2><p><div class="embedded-readme"></p>
 
