Hourly scheduled redeploy 4ae07c2ae5e68dc114a4be694c7b26491f10cdcd

--- a/manual/alerts/pingdom-homepage-check.html
+++ b/manual/alerts/pingdom-homepage-check.html
@@ -152,18 +152,11 @@
     </div>
 
      <div class="govuk-!-font-size-16 govuk-!-margin-top-6">
-    <div class="govuk-warning-text">
-      <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
-      <strong class="govuk-warning-text__text">
-        <span class="govuk-warning-text__assistive">Warning</span>
-        This document has not been updated for a while now. It may be out of date.
-      </strong>
-    </div>
 
-  Last updated: <a href="https://github.com/alphagov/govuk-developer-docs/commit/662b8a9bd929c5af00b6c67231b3fc57a288ce64">17 Sep 2020</a>
+  Last updated: <a href="https://github.com/alphagov/govuk-developer-docs/commit/55cbbabcd7fe7d13d18177f294d7e9edd7872d55">22 Apr 2021</a>
 </div>
 
- <h1 id='header'>Pingdom check for homepage failing</h1> <p><a href="https://www.pingdom.com/">Pingdom</a> monitors externally (from ~10 locations in Europe and America)
+ <h1 id='header'>Pingdom check for homepage failing</h1> <p><a href="/manual/pingdom.html">Pingdom</a> monitors externally (from ~10 locations in Europe and America)
 that it can connect to <a href="https://www.gov.uk">https://www.gov.uk</a>. If this fails it could
 indicate that DNS for www.gov.uk is not working, our CDN has failed or
 GOV.UK and all the static mirrors are inaccessible, which would
