--- a/manual/alerts/pingdom-search-check.html
+++ b/manual/alerts/pingdom-search-check.html
@@ -153,10 +153,10 @@
 
      <div class="govuk-!-font-size-16 govuk-!-margin-top-6">
 
-  Last updated: <a href="https://github.com/alphagov/govuk-developer-docs/commit/9ba52660950982bbc0e38ae16ee524710e942a47">19 Apr 2021</a>
+  Last updated: <a href="https://github.com/alphagov/govuk-developer-docs/commit/55cbbabcd7fe7d13d18177f294d7e9edd7872d55">22 Apr 2021</a>
 </div>
 
- <h1 id='header'>Pingdom search check</h1> <p>If Pingdom can&rsquo;t retrieve the search results page, it means that while GOV.UK
+ <h1 id='header'>Pingdom search check</h1> <p>If <a href="/manual/pingdom.html">Pingdom</a> can&rsquo;t retrieve the search results page, it means that while GOV.UK
 may be available, it is not possible to retrieve dynamic content. Assuming that
 the homepage check has not failed, the CDN is probably OK. It is possible for
 our main provider (AWS) to be down and for us to serve static content
