--- a/manual/debug-underperforming-search.html
+++ b/manual/debug-underperforming-search.html
@@ -218,10 +218,10 @@ being constantly close to 100%.</p></li>
           <h4>How to...</h4>
 
           <ul class="govuk-list">
-            <li><a href="/manual/add-a-pingdom-check.html">Add a Pingdom check</a></li>
             <li><a href="/manual/add-an-icinga-passive-check.html">Add an Icinga passive check to a Jenkins job</a></li>
             <li><a href="/manual/nagios-nrpe-connection-failures.html">Debug Nagios NRPE connection failures</a></li>
             <li><a href="/manual/errors.html">How we handle errors</a></li>
+            <li><a href="/manual/pingdom.html">Pingdom</a></li>
             <li><a href="/manual/nagstamon.html">Use Nagstamon for monitoring Icinga</a></li>
           </ul>
         </div>
