--- a/manual/nagstamon.html
+++ b/manual/nagstamon.html
@@ -253,11 +253,11 @@ Ubuntu), use the following command:
           <h4>How to...</h4>
 
           <ul class="govuk-list">
-            <li><a href="/manual/add-a-pingdom-check.html">Add a Pingdom check</a></li>
             <li><a href="/manual/add-an-icinga-passive-check.html">Add an Icinga passive check to a Jenkins job</a></li>
             <li><a href="/manual/nagios-nrpe-connection-failures.html">Debug Nagios NRPE connection failures</a></li>
             <li><a href="/manual/debug-underperforming-search.html">Debug underperforming search</a></li>
             <li><a href="/manual/errors.html">How we handle errors</a></li>
+            <li><a href="/manual/pingdom.html">Pingdom</a></li>
           </ul>
         </div>
 
