--- a/manual/pingdom-bouncer-canary-check.html
+++ b/manual/pingdom-bouncer-canary-check.html
@@ -145,11 +145,12 @@
             
   <p><a href='/manual.html#monitoring'>Monitoring</a></p>   <div class="govuk-!-font-size-16 govuk-!-margin-top-6">
 
-  Last updated: <a href="https://github.com/alphagov/govuk-developer-docs/commit/dc78736bf66c6b4d0adc57243493d59e8fb3b21a">24 Mar 2021</a>
+  Last updated: <a href="https://github.com/alphagov/govuk-developer-docs/commit/55cbbabcd7fe7d13d18177f294d7e9edd7872d55">22 Apr 2021</a>
 </div>
 
- <h1 id='header'>Pingdom Bouncer canary check</h1> <p>Bouncer has a canary route at <a href="https://www.direct.gov.uk/__canary__">https://www.direct.gov.uk/__canary__</a>
-which queries all the database tables which Bouncer uses to serve all
+ <h1 id='header'>Pingdom Bouncer canary check</h1> <p>This alert is raised by <a href="/manual/pingdom.html">Pingdom</a> when it cannot
+reach Bouncer&rsquo;s canary route at <a href="https://www.direct.gov.uk/__canary__">https://www.direct.gov.uk/__canary__</a>.
+This route queries all the database tables which Bouncer uses to serve all
 responses to users and checks that those tables are not empty. The
 canary should return 200; if it doesn&rsquo;t then errors will be being served
 to users - see the table below for more details of the errors in each
@@ -247,11 +248,11 @@ are only used by Transition and not by Bouncer.</p>
           <h4>How to...</h4>
 
           <ul class="govuk-list">
-            <li><a href="/manual/add-a-pingdom-check.html">Add a Pingdom check</a></li>
             <li><a href="/manual/add-an-icinga-passive-check.html">Add an Icinga passive check to a Jenkins job</a></li>
             <li><a href="/manual/nagios-nrpe-connection-failures.html">Debug Nagios NRPE connection failures</a></li>
             <li><a href="/manual/debug-underperforming-search.html">Debug underperforming search</a></li>
             <li><a href="/manual/errors.html">How we handle errors</a></li>
+            <li><a href="/manual/pingdom.html">Pingdom</a></li>
             <li><a href="/manual/nagstamon.html">Use Nagstamon for monitoring Icinga</a></li>
           </ul>
         </div>
