Hourly scheduled redeploy 4ae07c2ae5e68dc114a4be694c7b26491f10cdcd

--- a/document-types/news_article.html
+++ b/document-types/news_article.html
@@ -361,16 +361,16 @@
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.uk/government/world-location-news/188434.lt">JK bus surengtas G8 šalių susitikimas demencijos klausimais</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/advice-for-british-nationals-in-chennai--6">Advice for British nationals in Chennai</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/%E5%8A%A0%E5%BC%B7%E9%9B%99%E9%82%8A%E6%99%BA%E8%B2%A1%E6%AC%8A%E5%90%88%E4%BD%9C-%E8%8B%B1%E5%9C%8B%E8%88%87%E5%8F%B0%E7%81%A3%E7%B0%BD%E7%BD%B2%E6%99%BA%E6%85%A7%E8%B2%A1%E7%94%A2%E6%AC%8A%E5%90%88%E4%BD%9C%E5%82%99%E5%BF%98%E9%8C%84">加強雙邊智財權合作 英國與台灣簽署智慧財產權合作備忘錄</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/atlantic-hurricane-season-are-you-prepared--3">Atlantic Hurricane Season: Are you prepared?</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/171850.es-419">G8: Oportunidades para todos, incluyendo Honduras</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/209252.pt">Tecnologias para Grandes Eventos é tema de Seminário GREAT em SP</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/173029.lt">Lietuvos kariai tarnaus JK vadovaujamoje ES kovinėje grupėje</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/175441.lt">Paskelbtos pirmos Kompetencijų pusiausvyros peržiūros ataskaitos</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/paris-saint-germain-v-chelsea-travel-advice--2">Paris Saint-Germain v Chelsea travel advice</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/224623.es-419">Concurso &ldquo;Inauguración Testino&rdquo; en Argentina</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/my-final-blog-muchas-gracias-y-hasta-pronto">My final blog. ¡Muchas gracias y hasta pronto!</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/british-high-commissioner-in-delhi-to-meet-the-chief-minister-of-gujarat">British High Commissioner in Delhi to meet the Chief Minister of Gujarat</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/office-closure--3">Office Closure</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/death-of-nelson-mandela">Death of Nelson Mandela</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/269252.pt">Britânicos participam da maior feira ferrovária da América Latina</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/uk-visa-applicant-arrested-for-fraud--2">UK Visa Applicant Arrested for Fraud</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/did-you-know-you-may-be-eligible-to-vote-in-the-eu-referendum--2">Did you know you may be eligible to vote in the EU Referendum?</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/197760.ar">السفير البريطاني في لبنان: آمل أن يغير حزب الله اتجاهه عن مصالح إيران والأسد</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/locate-switch-off">LOCATE switch-off</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/belizean-military-top-brass-visit-united-kingdom">Belizean military top brass visit United Kingdom</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=news_article&amp;count=10">Source query from Search API</a></p>
 
