Hourly scheduled redeploy 5b91b1a1fdf3ea8532175312c37ac9293c01ace9

--- a/apps/govuk-docker/compatibility.html
+++ b/apps/govuk-docker/compatibility.html
@@ -672,11 +672,7 @@
 <li>✅ account-api</li>
 <li>✅ asset-manager</li>
 <li>✅ authenticating-proxy</li>
-<li>⚠ bouncer
-<ul>
-<li><strong>TODO: Missing support for a webserver stack</strong></li>
-</ul>
-</li>
+<li>✅ bouncer</li>
 <li>✅ cache-clearing-service</li>
 <li>❌ ckan
 <ul>
