--- a/document-types/external_content.html
+++ b/document-types/external_content.html
@@ -359,16 +359,16 @@ actually any pages with this document type.</p>
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.ukhttp//www.shetland.gov.uk">Shetland Islands Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.iwight.com">Isle of Wight Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.preston.gov.uk">Preston City Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.winchester.gov.uk">Winchester City Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.powys.gov.uk">Powys County Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.barnet.gov.uk/">London Borough of Barnet Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.havant.gov.uk">Havant Borough Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.crawley.gov.uk">Crawley Borough Council</a></li>
 <li><a href="https://www.gov.ukhttp//www.coventry.gov.uk">Coventry City Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.antrim.gov.uk/">Antrim Borough Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.dorsetforyou.com/weymouthandportland">Weymouth and Portland Borough Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.hants.gov.uk">Hampshire County Council</a></li>
-<li><a href="https://www.gov.ukhttps//www.ethnicity-facts-figures.service.gov.uk/crime-justice-and-the-law/policing/stop-and-search/latest">Stop and search | Ethnicity facts and figures</a></li>
-<li><a href="https://www.gov.ukhttp//www.aylesburyvaledc.gov.uk/">Aylesbury Vale District Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.thanet.gov.uk">Thanet District Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.reading.gov.uk/">Reading Borough Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.harlow.gov.uk">Harlow District Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.northumberland.gov.uk">Northumberland County Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.portsmouth.gov.uk">Portsmouth City Council</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=external_content&amp;count=10">Source query from Search API</a></p>
 
