Hourly scheduled redeploy 5b91b1a1fdf3ea8532175312c37ac9293c01ace9

--- a/document-types/notice.html
+++ b/document-types/notice.html
@@ -371,7 +371,7 @@
 <li><a href="https://www.gov.uk/government/publications/public-sector-decarbonisation-scheme-psds">Public Sector Decarbonisation Scheme</a></li>
 <li><a href="https://www.gov.uk/government/publications/vat-notice-7001-should-i-be-registered-for-vat">Who should register for VAT (VAT Notice 700/1)</a></li>
 <li><a href="https://www.gov.uk/government/publications/vat-notice-70022-making-tax-digital-for-vat">VAT Notice 700/22: Making Tax Digital for VAT</a></li>
-<li><a href="https://www.gov.uk/government/publications/event-research-programme-ministerial-directions">Event Research Programme - ministerial directions</a></li>
+<li><a href="https://www.gov.uk/government/publications/event-research-programme-ministerial-directions">Event Research Programme - Ministerial Directions</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=notice&amp;count=10">Source query from Search API</a></p>
 
