Hourly scheduled redeploy 5b91b1a1fdf3ea8532175312c37ac9293c01ace9

--- a/document-types/news_article.html
+++ b/document-types/news_article.html
@@ -361,16 +361,16 @@
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.uk/government/world-location-news/201650.fr">&ldquo;Nous pouvons faire de l&#39;action nécessaire contre le changement climatique une opportunité, et non un fardeau&rdquo;</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/new-honorary-consul-appointed-in-the-bahamas">New honorary consul appointed in the Bahamas</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/173244.lt">Lietuva perėmė Europos Sąjungos vairą</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/261585.ja">気候変動対策と経済成長は両立が可能なことを示す報告書を発表</a></li>
 <li><a href="https://www.gov.uk/government/world-location-news/238911.pt">Conferência sobre Eficiência Energética em Belo Horizonte</a></li>
 <li><a href="https://www.gov.uk/government/world-location-news/human-rights-council-18th-session-of-the-universal-periodic-review-working-group-geneva-27-january-to-7-february-2014--8">Human Rights Council: 18th Session of the Universal Periodic Review Working Group, Geneva, 27 January to 7 February 2014</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/british-high-commissioner-in-delhi-to-meet-the-chief-minister-of-gujarat">British High Commissioner in Delhi to meet the Chief Minister of Gujarat</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/208807.es">Expositores británicos opinan sobre Smart Cities en Barcelona</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/turks-and-caicos-islands-cabinet-update-and-actions--4">Turks and Caicos Islands Cabinet update and actions</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/british-embassy-muscat-condolence-book-for-the-baroness-thatcher-of-kesteven">British Embassy Muscat: Condolence book for the Baroness Thatcher of Kesteven</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/228522.es">David Muñoz y Simon Manley mano a mano en los fogones</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/286926.zh">英國更換簽證語言測驗機構</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/advice-for-british-nationals-in-kolkata--32">Advice for British nationals in Kolkata</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/224845.es-419">La consulta en Crimea</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/chevening-applications-top-tips">Chevening Applications: Top Tips</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/office-closure--3">Office Closure</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/190265.ja">RADIEX 2013 に英国が出展</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/192676.pt">São Paulo e Rio recebem a maior feira de educação britânica já organizada no país</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=news_article&amp;count=10">Source query from Search API</a></p>
 
