Hourly scheduled redeploy 31ac24733f23f19aa1b0b72bebf67fa603bd91e6

--- a/apps/local-links-manager.html
+++ b/apps/local-links-manager.html
@@ -418,7 +418,11 @@
 </ul></p>
 <h2 id='readme'>README</h2><p><div class="embedded-readme"></p>
 
-<p>Admin interface for managing Local Authorities links including all their services and interactions.</p>
+<p>Admin interface for managing Local Authorities&rsquo; links including all their services and interactions.</p>
+
+<p>For example, <a href="https://www.gov.uk/garden-waste-disposal">this service</a> uses Local Links Manager to determine the URL of the garden waste disposal page on the Local Authority website which corresponds to the postcode a user has entered.</p>
+
+<p>Note that Local Links Manager does not determine a user&rsquo;s Local Authority based on their postcode. We use <a href="https://github.com/alphagov/mapit">Mapit</a> for that.</p>
 
 <p>This app maps RESTful URLs onto a persistence layer. It doesn&rsquo;t face public users.</p>
 
